--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: GPQR
 Type: Package
-Title: What the Package Does (Title Case)
-Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
-Encoding: UTF-8
-LazyData: true
+Title: Group Penalized Smooth Quantile Regression
+Version: 1.2
+Date: 2017-11-17
+Author: Mohamed Ouhourane, Yi Yang, Karim Oualkacha
+Maintainer: Mohamed Ouhourane <mohamed.ouhourane@gmail.com>
+Description: This package implements a blockwise-majorization-decent  for group quantile regression(BMD-SQR), for efficiently computing the solution paths of the group-lasso penalized quantile regression, the group-Mcp penalized quantile regression, the group-Scad penalized quantile regression and theirs approximations.
+License: GPL-2
+NeedsCompilation: yes
+Packaged: 2020-10-26 00:15:10 UTC; mohamedouhourane
